--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Belajar Tailwind-4</title>
   <link href="./src/output.css" rel="stylesheet">
 </head>
+
 <body class="dark:bg-slate-700 dark:text-slate-200">
 
   <h1 class="m-auto text-6xl font-bold text-center my-8">Mencoba Tailwind-4</h1>
@@ -21,70 +23,206 @@
 
   <section class="font-roboto max-w-3xl mx-auto">
     <h1 class="mb-4 text-4xl font-bold">Mencoba TypoGraphy TailwindCSS V4</h1>
-    <div class="mb-4 text-lg text-gray-400">By <a href="#" class="text-gray-800">Muhamad Somantri</a>, 1 Januari 2025</div>
-    <p class="mb-4">Lorem ipsum dolor sit amet, <a href="" class="font-semibold text-blue-700"> consectetur </a> adipisicing elit. Perferendis provident iure tenetur sapiente! Officia quasi nemo odit iusto ullam est sunt ea necessitatibus quis odio. Ab, ullam nemo molestias beatae porro vel assumenda, unde incidunt sunt quod nobis nulla. Itaque, possimus facilis ea explicabo deserunt quae dignissimos voluptatem vel ratione.</p>
-    <blockquote class="mb-4 italic font-thin text-1xl">"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo minus atque recusandae veniam? Illum cupiditate dolore quas, recusandae error molestiae magni sunt reprehenderit architecto assumenda animi est aut quasi quae."</blockquote>
-    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, quam rem exercitationem placeat optio dignissimos minus tempora, expedita impedit, labore fuga consequatur. Tempore praesentium quia accusantium consequatur impedit quis nam?</p>
+    <div class="mb-4 text-lg text-gray-400">By <a href="#" class="text-gray-800">Muhamad Somantri</a>, 1 Januari 2025
+    </div>
+    <p class="mb-4">Lorem ipsum dolor sit amet, <a href="" class="font-semibold text-blue-700"> consectetur </a>
+      adipisicing elit. Perferendis provident iure tenetur sapiente! Officia quasi nemo odit iusto ullam est sunt ea
+      necessitatibus quis odio. Ab, ullam nemo molestias beatae porro vel assumenda, unde incidunt sunt quod nobis
+      nulla. Itaque, possimus facilis ea explicabo deserunt quae dignissimos voluptatem vel ratione.</p>
+    <blockquote class="mb-4 italic font-thin text-1xl">"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo
+      minus atque recusandae veniam? Illum cupiditate dolore quas, recusandae error molestiae magni sunt reprehenderit
+      architecto assumenda animi est aut quasi quae."</blockquote>
+    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, quam rem exercitationem placeat
+      optio dignissimos minus tempora, expedita impedit, labore fuga consequatur. Tempore praesentium quia accusantium
+      consequatur impedit quis nam?</p>
   </section>
 
-  <div class="max-w-xl h-96 bg-slate-300 mx-auto mt-[40px] overflow-scroll bg-fixed" style="background-image: url(./img/pantai.avif)">
-    <p class="p-5 text-2xl">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam veritatis aliquam, aliquid vitae distinctio placeat reprehenderit! Esse deleniti libero autem saepe nesciunt exercitationem voluptates veniam voluptatem dolor odio, consectetur perspiciatis pariatur accusamus commodi cupiditate cum rem quidem repellendus ad est ipsam cumque. Blanditiis labore totam fuga culpa tempore rem molestiae? Amet aspernatur quis totam corrupti inventore in consequatur sapiente quam asperiores eaque porro vel eius, nesciunt eos laudantium minima quae rem qui voluptatum ducimus debitis at. Placeat quisquam sunt repellendus nihil illum porro est eum officiis labore rerum facere dolorum repudiandae, qui reiciendis quasi voluptates earum optio enim doloribus maxime quidem dolores cupiditate. Facilis, aspernatur quo veniam doloribus sint alias ad illo odit hic omnis sed aperiam eum, quam accusantium, nihil sapiente consequuntur atque numquam nisi quaerat. Minima, numquam quos odit culpa ipsum dolorum illo reprehenderit perferendis cupiditate quisquam error consequatur assumenda, illum dolor voluptas exercitationem velit? Atque consequatur natus veniam, sit, aut deleniti, illo velit animi tempora blanditiis sunt quas. Dolor doloribus quasi autem numquam perferendis laboriosam culpa itaque, reiciendis minus possimus aperiam doloremque veniam reprehenderit ratione sed, magnam impedit magni saepe dolore cumque sit, nostrum cum quaerat repellendus! Eos molestias accusamus voluptas distinctio nam dolores eius quod culpa!</p>
+  <div class="max-w-xl h-96 bg-slate-300 mx-auto mt-[40px] overflow-scroll bg-fixed"
+    style="background-image: url(./img/pantai.avif)">
+    <p class="p-5 text-2xl">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam veritatis aliquam, aliquid
+      vitae distinctio placeat reprehenderit! Esse deleniti libero autem saepe nesciunt exercitationem voluptates veniam
+      voluptatem dolor odio, consectetur perspiciatis pariatur accusamus commodi cupiditate cum rem quidem repellendus
+      ad est ipsam cumque. Blanditiis labore totam fuga culpa tempore rem molestiae? Amet aspernatur quis totam corrupti
+      inventore in consequatur sapiente quam asperiores eaque porro vel eius, nesciunt eos laudantium minima quae rem
+      qui voluptatum ducimus debitis at. Placeat quisquam sunt repellendus nihil illum porro est eum officiis labore
+      rerum facere dolorum repudiandae, qui reiciendis quasi voluptates earum optio enim doloribus maxime quidem dolores
+      cupiditate. Facilis, aspernatur quo veniam doloribus sint alias ad illo odit hic omnis sed aperiam eum, quam
+      accusantium, nihil sapiente consequuntur atque numquam nisi quaerat. Minima, numquam quos odit culpa ipsum dolorum
+      illo reprehenderit perferendis cupiditate quisquam error consequatur assumenda, illum dolor voluptas
+      exercitationem velit? Atque consequatur natus veniam, sit, aut deleniti, illo velit animi tempora blanditiis sunt
+      quas. Dolor doloribus quasi autem numquam perferendis laboriosam culpa itaque, reiciendis minus possimus aperiam
+      doloremque veniam reprehenderit ratione sed, magnam impedit magni saepe dolore cumque sit, nostrum cum quaerat
+      repellendus! Eos molestias accusamus voluptas distinctio nam dolores eius quod culpa!</p>
 
   </div>
-  
-  <div class="mt-32 max-w-xl mx-auto h-96 bg-slate-500 bg-contain bg-no-repeat bg-center rounded-2xl shadow-xl shadow-slate-500 overflow border-8 flex" style="background-image: url(/img/pantai.avif);">
 
-  <div class="w-[200px] h-[200px] bg-white/5 m-auto backdrop-blur-md rounded-full">
+  <div
+    class="mt-32 max-w-xl mx-auto h-96 bg-slate-500 bg-contain bg-no-repeat bg-center rounded-2xl shadow-xl shadow-slate-500 overflow border-8 flex"
+    style="background-image: url(/img/pantai.avif);">
 
+    <div class="w-[200px] h-[200px] bg-white/5 m-auto backdrop-blur-md rounded-full">
+
+    </div>
   </div>
-  </div>
-
-
-
-
 
   <hr class="my-20">
 
-
-  
- <div class="flex justify-center">
-  <span class="text-sm text-slate-600 mr-2">Light</span>
-  <input type="checkbox" id="toggle" class="hidden">
-  <label for="toggle">
-    <div class="w-9 h-5 bg-slate-500 rounded-full flex items-center p-1 cursor-pointer ">
-      <div class="w-4 h-4 bg-slate-100 rounded-full toggle-circle"></div>
-    </div>
-  </label>
-  <span class="text-sm text-slate-600 ml-2">Dark</span>
- </div>
+  <div class="flex justify-center">
+    <span class="text-sm text-slate-600 mr-2">Light</span>
+    <input type="checkbox" id="toggle" class="hidden">
+    <label for="toggle">
+      <div class="w-9 h-5 bg-slate-500 rounded-full flex items-center p-1 cursor-pointer ">
+        <div class="w-4 h-4 bg-slate-100 rounded-full toggle-circle"></div>
+      </div>
+    </label>
+    <span class="text-sm text-slate-600 ml-2">Dark</span>
+  </div>
 
 
-  <button class="my-10 bg-sky-500 px-5 py-5 rounded-full font-semibold text-white font-roboto mx-auto block hover:bg-sky-600 active:bg-sky-900 focus:ring-2 focus:ring-sky-300 dark:bg-slate-900 ">Simpan</button>
+  <button
+    class="my-10 bg-sky-500 px-5 py-5 rounded-full font-semibold text-white font-roboto mx-auto block hover:bg-sky-600 active:bg-sky-900 focus:ring-2 focus:ring-sky-300 dark:bg-slate-900 ">Simpan</button>
 
-  <div class="max-w-xl my-10 border border-slate-200 rounded-xl mx-auto p-5 shadow-xl font-roboto hover:bg-sky-500 group">
+  <div
+    class="max-w-xl my-10 border border-slate-200 rounded-xl mx-auto p-5 shadow-xl font-roboto hover:bg-sky-500 group">
     <h5 class="font-bold text-slate-700 text-lg mb-6 group-hover:text-white">MyCard</h5>
-    <p class="text-slate-500 group-hover:text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias facilis enim perspiciatis ipsa ipsam molestiae, fugiat quibusdam animi numquam architecto ad odio doloribus sit voluptate. Enim, expedita facere! Saepe, autem!</p>
+    <p class="text-slate-500 group-hover:text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias
+      facilis enim perspiciatis ipsa ipsam molestiae, fugiat quibusdam animi numquam architecto ad odio doloribus sit
+      voluptate. Enim, expedita facere! Saepe, autem!</p>
   </div>
 
   <div class="max-w-lg border border-slate-200 rounded-xl mx-auto shadow-xl font-roboto p-5">
     <form action="">
       <label for="email">
-        <span class="block mb-3 font-semibold text-slate-500 after:content-['*'] after:text-pink-500 after:ml-0.5">Email :</span>
-          <input type="email" name="" id="" placeholder="Masukan Alamat Email" class="px-3 py-5 border border-slate-300 rounded-xl w-full block text-sm focus:outline-none focus:ring-1 focus:ring-sky-500 focus:border-ring-sky-500 invalid:text-pink-700 invalid:focus:ring-pink-700 invalid:focus:border-pink-700 peer">
-          <span class="text-sm m-1 text-pink-700 invisible peer-invalid:visible ">Email tidak valid</span>
+        <span class="block mb-3 font-semibold text-slate-500 after:content-['*'] after:text-pink-500 after:ml-0.5">Email
+          :</span>
+        <input type="email" name="" id="" placeholder="Masukan Alamat Email"
+          class="px-3 py-5 border border-slate-300 rounded-xl w-full block text-sm focus:outline-none focus:ring-1 focus:ring-sky-500 focus:border-ring-sky-500 invalid:text-pink-700 invalid:focus:ring-pink-700 invalid:focus:border-pink-700 peer">
+        <span class="text-sm m-1 text-pink-700 invisible peer-invalid:visible ">Email tidak valid</span>
       </label>
     </form>
-
   </div>
+
+  <hr class="my-20">
+
+  <div
+    class="w-40 h-40 bg-sky-500 mx-auto rounded-xl shadow-lg hover:scale-125 hover:rotate-45 hover:bg-pink-500 transition origin-top-left ">
+  </div>
+
+  <div class="w-40 h-40 bg-pink-500 mx-auto mt-20 group">
+    <div class="w-full h-full bg-sky-500 rounded-lg group-hover:rotate-45 origin-top-left transition duration-1000">
+    </div>
+  </div>
+
+  <div class="w-40 h-40 bg-pink-500 mx-auto shadow-lg mt-20 rounded-lg animate-[spin_2s_linear_infinite] "> </div>
+
+
+  <hr class="my-20 border-2">
+
+  <div class="container mx-auto">
+    <div class="border rounded-xl shadow-xl p-10 relative">
+      <div class="w-20 h-20 bg-pink-500 rounded-full flex absolute -top-15 left-1/2 translate-x-1/2 cursor-pointer ">
+        <span class="text-2xl m-auto">✖️</span>
+      </div>
+      <img src="img/pantai.avif" alt="pantai" width="150" class="float-left mr-5 rounded-lg">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium in eaque, doloremque aperiam illo neque a
+        quae, debitis dignissimos rem dolores maiores libero error aliquid facilis labore. Excepturi consequatur et amet
+        facere, voluptatem reiciendis? Ullam repudiandae delectus quo nostrum voluptatem minus voluptas eligendi nemo
+        excepturi itaque est impedit voluptatibus dolore ab autem maxime quibusdam, debitis beatae facere modi.
+        Recusandae, repudiandae ipsam? Cupiditate temporibus, aliquam, veritatis quod nostrum, mollitia vitae odio natus
+        molestiae ullam explicabo et harum illum nisi illo reprehenderit. Neque minus quis doloribus reiciendis, porro
+        provident nisi delectus iste possimus nesciunt fugiat cupiditate error. Numquam dolorem perspiciatis quibusdam
+        corrupti!</p>
+    </div>
+  </div>
+
+  <div class="container mx-auto border rounded-lg shadow-lg p-10 mt-10 columns-3 ">
+    <img src="./img/pantai.avif" alt="pantai" class="mb-5">
+    <img src="./img/pantai.avif" alt="pantai" class="mb-5">
+    <img src="./img/pantai.avif" alt="pantai" class="mb-5">
+    <img src="./img/pantai.avif" alt="pantai" class="mb-5">
+    <img src="./img/pantai.avif" alt="pantai" class="mb-5">
+    <img src="./img/pantai.avif" alt="pantai" class="mb-5">
+  </div>
+
+  <hr class="my-24 border-t-4">
+
+  <div class="container px-6 font-roboto max-w-md mx-auto sm:max-w-xl md:max-w-5xl lg:flex lg:max-w-full lg:px-0">
+    <div class="lg:p-12 lg:flex-1 ">
+      <h3 class="text-4xl font-bold text-slate-800 sm:text-5xl "><span class="text-sky-300">Diki </span>Muhamad Somantri
+      </h3>
+      <img src="./img/pantai.avif" alt="diki" class="mt-4 rounded-xl shadow-xl sm:mt-6 lg:hidden ">
+      <h2 class="mt-6 text-2xl font-semibold text-slate-800 sm:mt-8 sm:text-4xl ">Mari Belajar Programing bersama WPU
+      </h2>
+      <p class="mt-2 text-slate-600 sm:mt-4 sm:text-xl ">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Obcaecati, aperiam ipsa soluta suscipit doloremque voluptatum, culpa cupiditate quidem ratione dolore, vel
+        laboriosam id asperiores adipisci alias! Sapiente iste voluptatum tempora quod tempore, </p>
+      <div class="mt-4">
+        <a href="#"
+          class="inline-block px-5 py-3 bg-red-500 text-white rounded-lg shadow-lg uppercase font-semibold tracking-wider text-sm sm:text-base">Subscribe
+          Channel Youtube</a>
+      </div>
+    </div>
+    <div class="hidden lg:flex lg:w-1/2">
+      <img src="./img/pantai.avif" alt="pantai" class="object-cover rounded-l-3xl ">
+    </div>
+  </div>
+
+
+  <h2 class="mt-24 mb-10 text-center font-bold text-3xl text-slate-700 font-roboto">MyGaleri</h2>
+
+  <div class="container mx-auto px-6 font-roboto sm:flex sm:flex-wrap sm:gap-6 sm:justify-center ">
+    <div class="rouded shadow-lg overflow-hidden rounded-md mb-10 sm:w-64 bg-white md:w-80 sm:mb-0 lg:w-72">
+      <img src="./img/pantai.avif" alt="imagecaption" width="600px" class="w-full">
+      <div class="px-6 py-4">
+        <div class="font-bold text-xl mb-2 text-slate-700">Image Title</div>
+          <p class="text-sm text-slate-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, quidem?</p>
+      </div>
+    </div>
+    <div class="rouded shadow-lg overflow-hidden rounded-md mb-10 sm:w-64 bg-white md:w-80 sm:mb-0 lg:w-72">
+      <img src="./img/pantai.avif" alt="imagecaption" width="600px" class="w-full">
+      <div class="px-6 py-4">
+        <div class="font-bold text-xl mb-2 text-slate-700">Image Title</div>
+          <p class="text-sm text-slate-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, quidem?</p>
+      </div>
+    </div>
+    <div class="rouded shadow-lg overflow-hidden rounded-md mb-10 sm:w-64 bg-white md:w-80 sm:mb-0 lg:w-72">
+      <img src="./img/pantai.avif" alt="imagecaption" width="600px" class="w-full">
+      <div class="px-6 py-4">
+        <div class="font-bold text-xl mb-2 text-slate-700">Image Title</div>
+          <p class="text-sm text-slate-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, quidem?</p>
+      </div>
+    </div>
+    <div class="rouded shadow-lg overflow-hidden rounded-md mb-10 sm:w-64 bg-white md:w-80 sm:mb-0 lg:w-72">
+      <img src="./img/pantai.avif" alt="imagecaption" width="600px" class="w-full">
+      <div class="px-6 py-4">
+        <div class="font-bold text-xl mb-2 text-slate-700">Image Title</div>
+          <p class="text-sm text-slate-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, quidem?</p>
+      </div>
+    </div>
+    <div class="rouded shadow-lg overflow-hidden rounded-md mb-10 sm:w-64 bg-white md:w-80 sm:mb-0 lg:w-72">
+      <img src="./img/pantai.avif" alt="imagecaption" width="600px" class="w-full">
+      <div class="px-6 py-4">
+        <div class="font-bold text-xl mb-2 text-slate-700">Image Title</div>
+          <p class="text-sm text-slate-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, quidem?</p>
+      </div>
+    </div>
+  </div>
+
+  
+
+  
+  
+
   <div class="mb-96"></div>
 
 
   <script>
-    const checkbox = document.querySelector ('#toggle');
+    const checkbox = document.querySelector('#toggle');
     const html = document.querySelector('html');
-    checkbox.addEventListener('click', function(){
+    checkbox.addEventListener('click', function () {
       checkbox.checked ? html.classList.add('dark') : html.classList.remove('dark');
     });
   </script>
 </body>
+
 </html>
