--- a/index.html
+++ b/index.html
@@ -210,7 +210,23 @@
 
   
 
-  
+  <div class="mt-64 p-2 font-roboto grid grid-cols-2 gap-2 md:grid-cols-4 md:p-4 ">
+    <h2 class="h-15 text-xl font-semibold text-slate-700 md:col-start-4 md:row-start-2 md:flex md:place-self-center"><span class="#">Welcome to My Website</span></h2>
+    <div class="h-15 text-lg font-bold text-slate-600 md:col-start-2 md:row-start-2 flex md:place-self-end "><span class="#">@diki muhamad somantri</span></div>
+    <div class="group grid-card">
+      <div class="w-full h-full bg-[url(/img/pantai.avif)] bg-cover absolute group group-hover:scale-125 transition-all duration-1000 group-hover:rotate-12"></div>
+    </div>
+    <div class="h-30 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3"></div>
+    <div class="h-30 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] "></div>
+    <div class="h-30 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3]"></div>
+    <div class="h-30 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] "></div>
+    <div class="h-30 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-2"></div>
+    <div class="h-30 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-4"></div>
+    <div class="h-30 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3]"></div>
+    <div class="h-30 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3"></div>
+    <div class="h-30 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3]"></div>
+    <div class="h-30 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3"></div>
+  </div>
   
 
   <div class="mb-96"></div>
